style: update prettier

--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
 
     <title>What's on?</title>
     <meta name="title" content="What's on?" />
-    <meta name="description" content="Quickly get the highest-rated movies/TV shows or explore." />
+    <meta
+      name="description"
+      content="Quickly get the highest-rated movies/TV shows or explore."
+    />
     <meta name="theme-color" content="#181818" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
@@ -16,7 +22,10 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="What's on?" />
     <meta property="og:image" content="%PUBLIC_URL%/og-image.png" />
-    <meta property="og:description" content="Quickly get the highest-rated movies/TV shows or explore." />
+    <meta
+      property="og:description"
+      content="Quickly get the highest-rated movies/TV shows or explore."
+    />
     <meta property="og:site_name" content="What's on?" />
     <meta property="og:locale" content="en_US" />
   </head>
